--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -388,55 +388,16 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <!--<com.google.android.material.button.MaterialButton
-                android:id="@+id/communityLayout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="8dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginBottom="8dp"
-                android:paddingHorizontal="24dp"
-                android:paddingVertical="12dp"
-                android:text="@string/chat"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:cornerRadius="8dp"
-                app:icon="@drawable/ic_forum"
-                app:iconGravity="textStart"
-                app:iconPadding="10dp"
-                app:iconSize="32dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/layoutSaveMoney" />-->
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
-
-
-    <!--<com.google.android.material.button.MaterialButton
-        android:id="@+id/bodyChangesButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/stop_smoking_after_body_changes"
-        android:textStyle="bold"
-        app:cornerRadius="8dp"
-        app:icon="@drawable/ic_accessibility"
-        app:iconPadding="0dp"
-        app:iconSize="32dp"
-        app:layout_constraintBottom_toTopOf="@+id/communityLayout"
-        app:layout_constraintEnd_toStartOf="@+id/shareButton"
-        app:layout_constraintStart_toStartOf="parent" />-->
 
     <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_ad_test_id"
+        ads:adUnitId="@string/banner_ad_id"
         ads:layout_constraintBottom_toBottomOf="parent"
         ads:layout_constraintEnd_toEndOf="parent"
         ads:layout_constraintStart_toStartOf="parent" />
