--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,10 +38,24 @@
             app:tint="@color/main_color" />
 
         <TextView
+            android:id="@+id/labelShare"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="@string/share_label"
+            android:textColor="@color/black"
+            android:textSize="12dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/imageViewShare"
+            app:layout_constraintEnd_toStartOf="@+id/imageViewShare"
+            app:layout_constraintTop_toTopOf="@id/imageViewShare"
+            tools:ignore="SpUsage" />
+
+        <TextView
             android:id="@+id/textViewTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="금연 정보"
+            android:text="@string/stop_smoking_label"
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -52,7 +66,7 @@
             android:id="@+id/textViewUserName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
             tools:text="OOO님 금연에 꼭 성공하세요!" />
@@ -61,7 +75,7 @@
             android:id="@+id/startDayTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
